# libra

./: .gitignore  .rtd-environment.yml  .travis.yml  README.md  archive_fit.py  archive_fit_hyak.py  archive_fit_linear.py  archive_fit_local.py  archive_fit_local_k296.py  archive_fit_local_k62.py  archive_fit_trans.py  condor_build.py  condor_run.sh  create_archive_bright.py  create_archive_k296.py  create_archive_k62.py  create_archive_microflares.py  create_archive_photon.py  create_archive_tyler.py  hyak_launch.py  plot_results.py  requirements.txt  setup.cfg  setup.py
docs/: api.rst  conf.py  index.rst  rtd-pip-requirements
libra/: __init__.py  etc.py  fitting.py  flares.py  magnitudes.py  phoenix.py  systems.py  templates.py  variability.py
notebooks/: apt_observability.ipynb  archive_fit.ipynb  archive_fit_trans.ipynb  archive_results.ipynb  create_archive.ipynb  e_posteriors.txt  f_posteriors.txt  fap.ipynb  flare_times.txt  flares-trappist.ipynb  flares.ipynb  flux_deficits.ipynb  granulation.ipynb  granulation_celerite_fit.ipynb  halpha.ipynb  insolations.ipynb  irtf.ipynb  k296_celerite.ipynb  k296_ephem.ipynb  k2_acf.ipynb  k2_sc_acf.ipynb  k62_acf.ipynb  k62_acf_sc.ipynb  kepler296_libramcmc.ipynb  kepler296_photon_limited.ipynb  kepler62_photon_limited.ipynb  kepler_to_spitzer_contrast.txt  linear_transit_model.ipynb  mags.ipynb  make_lc.ipynb  observe.ipynb  planet_properties.ipynb  rotation_period.ipynb  sanity_check_amps.ipynb  smart.ipynb  spot_contrast_sanitycheck.ipynb  spot_contrasts.ipynb  spot_contrasts_gp.ipynb  spot_contrasts_gp_bright.ipynb  (+26 more)
(+47 files in other folders)
