[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = libra
description = Weighing planets with light.
long_description = Simulate JWST observations of transiting exoplanets.
author = Brett M. Morris
author_email = bmmorris@uw.edu
license = MIT
url = https://github.com/bmorris3/libra
edit_on_github = True
github_project = bmorris3/libra
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.0.dev

[entry_points]
astropy-package-template-example = packagename.example_mod:main
